removing api key

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     $("#results").toggle();
     });
     function keyWordsearch(){
-            gapi.client.setApiKey('AIzaSyB6SDZYZLNY5gtlwcmPLhb3zcl-c7rGbs0');
+            gapi.client.setApiKey('APIKEY');
             gapi.client.load('youtube', 'v3', function() {
                     makeRequest();
             });
